--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 Django==1.8.2
+dj-database-url==0.3.0
+dj-static==0.0.6
+django-toolbelt==0.0.1
 djangorestframework==3.1.2
 exam==0.10.5
+gunicorn==19.3.0
 mock==1.0.1
+psycopg2==2.6
+static3==0.6.1
 wsgiref==0.1.2
