fixing app.json

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
   "name": "PayPerks demo, a Url shortener",
-  "repository": "https://github.com/gterzian/payperks_demo",
+  "repository": "https://github.com/gterzian/payperks_demo"
 }
